@startuml
abstract class "Tizen.Applications.ComponentBased.Common.BaseComponent" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.BaseComponent.html]] {
	+ ComponentId : string <<readonly>>
	+ ContextHandle : System.IntPtr
	+ Id : string <<readonly>>
	+ Parent : ComponentBasedApplication <<readonly>>
--
	+ Finish()
	+ OnRestoreContents(c)
	+ OnSaveContent(c)
	+ SendLaunchRequestAsync(control, replyAfterLaunching) : Task<AppControlResult>
--
	+ DeviceOrientationChanged <<event>>
	+ LocaleChanged <<event>>
	+ LowBattery <<event>>
	+ LowMemory <<event>>
	+ RegionFormatChanged <<event>>
	+ SuspendedStateChanged <<event>>
}
class "Tizen.Applications.Bundle" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.Bundle.html]]
class "Tizen.Applications.AppControl" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.AppControl.html]]
abstract class "Tizen.Applications.ComponentBased.Common.ComponentBasedApplication" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.ComponentBasedApplication.html]] {
	+ ComponentBasedApplication(typeInfo)
	# OnExit()
	# OnFinished()
	# OnInit(args)
	{abstract} # OnRun()
	+ Exit()
	+ RegisterComponent(compType, compId)
	+ Run(args)
}
Enum "Tizen.Applications.ComponentBased.Common.DisplayStatus" <<Enumeration>> [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.DisplayStatus.html]] {
	Off
	On
}
abstract class "Tizen.Applications.ComponentBased.Common.FrameComponent" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.FrameComponent.html]] {
	+ DisplayStatus : DisplayStatus <<readonly>>
--
	{abstract} + CreateWindowInfo() : IWindowInfo
	{abstract} + OnCreate() : bool
	+ OnDestroy()
	+ OnPause()
	+ OnResume()
	+ OnStart(appControl, restarted)
	+ OnStop()
}
interface "Tizen.Applications.ComponentBased.Common.IWindowInfo" <<Disposable>> [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.IWindowInfo.html]] {
	+ ResourceId : int <<readonly>>
}
interface "Tizen.Applications.ComponentBased.Common.IWindowProxy" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.IWindowProxy.html]] {
	{abstract} + InitializeWindow(width, height)
}
abstract class "Tizen.Applications.ComponentBased.Common.ServiceComponent" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.ServiceComponent.html]] {
	{abstract} + OnCreate() : bool
	+ OnDestroy()
	+ OnStartCommand(appControl, restarted)
}
abstract class "Tizen.Applications.ComponentBased.Common.WidgetComponent" [[https://github.sec.samsung.net/pages/dotnet/apidoc/devel/api/Tizen.Applications.ComponentBased.Common.WidgetComponent.html]] {
	{abstract} + CreateWindowInfo(width, height) : IWindowProxy
	{abstract} + OnCreate(width, height) : bool
	+ OnDestroy(permanent)
	+ OnPause()
	+ OnResume()
	+ OnStart(restarted)
	+ OnStop()
}
'  Unresolved Type: LowMemoryEventArgs    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "LowMemoryEventArgs"
'  Unresolved Type: LowBatteryEventArgs    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "LowBatteryEventArgs"
'  Unresolved Type: LocaleChangedEventArgs    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "LocaleChangedEventArgs"
'  Unresolved Type: RegionFormatChangedEventArgs    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "RegionFormatChangedEventArgs"
'  Unresolved Type: DeviceOrientationEventArgs    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "DeviceOrientationEventArgs"
'  Unresolved Type: SuspendedStateEventArgs    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "SuspendedStateEventArgs"
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "Tizen.Applications.ComponentBased.Common.ComponentBasedApplication"
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "Tizen.Applications.Bundle"
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "Tizen.Applications.AppControl"
'  Unresolved Type: AppControlReplyCallback    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "AppControlReplyCallback"
'  Unresolved Type: AppControlResult    (used in Tizen.Applications.ComponentBased.Common.BaseComponent)
"Tizen.Applications.ComponentBased.Common.BaseComponent" ..> "AppControlResult"
"Application" <|-- "Tizen.Applications.ComponentBased.Common.ComponentBasedApplication"
"Tizen.Applications.ComponentBased.Common.ComponentStateManger" ..> "Tizen.Applications.ComponentBased.Common.BaseComponent"
"Tizen.Applications.ComponentBased.Common.ComponentStateManger" ..> "Tizen.Applications.ComponentBased.Common.ComponentBasedApplication"
"Tizen.Applications.ComponentBased.Common.BaseComponent" <|-- "Tizen.Applications.ComponentBased.Common.FrameComponent"
"Tizen.Applications.ComponentBased.Common.FrameComponent" ..> "Tizen.Applications.ComponentBased.Common.DisplayStatus"
"Tizen.Applications.ComponentBased.Common.FrameComponent" ..> "Tizen.Applications.ComponentBased.Common.IWindowInfo"
"Tizen.Applications.ComponentBased.Common.FrameComponent" ..> "Tizen.Applications.AppControl"
"Tizen.Applications.ComponentBased.Common.ComponentStateManger" <|-- "Tizen.Applications.ComponentBased.Common.FrameComponentStateManager"
"Tizen.Applications.ComponentBased.Common.IWindowInfo" <|.. "Tizen.Applications.ComponentBased.Common.IWindowProxy"
"Tizen.Applications.ComponentBased.Common.BaseComponent" <|-- "Tizen.Applications.ComponentBased.Common.ServiceComponent"
"Tizen.Applications.ComponentBased.Common.ServiceComponent" ..> "Tizen.Applications.AppControl"
"Tizen.Applications.ComponentBased.Common.ComponentStateManger" <|-- "Tizen.Applications.ComponentBased.Common.ServiceComponentStateManager"
"Tizen.Applications.ComponentBased.Common.BaseComponent" <|-- "Tizen.Applications.ComponentBased.Common.WidgetComponent"
"Tizen.Applications.ComponentBased.Common.WidgetComponent" ..> "Tizen.Applications.ComponentBased.Common.IWindowProxy"
"Tizen.Applications.ComponentBased.Common.ComponentStateManger" <|-- "Tizen.Applications.ComponentBased.Common.WidgetComponentStateManager"
@enduml
